fix bug where HTML containers can get too wide

--- a/public/styles.css
+++ b/public/styles.css
@@ -51,6 +51,7 @@ body {
     border-radius: 20px;
     margin: 5px 10px;
     min-height: 120px;
+    max-width: 250px;
     min-width: 250px;
     padding: 12px;
 }
